ec2 describe-security-groups --group-ids sg-0b4eb1cad534284de
{
    "SecurityGroups": [
        {
            "Description": "EKS node shared security group",
            "GroupName": "sock-shop-node-2024081513415349590000000f",
            "IpPermissions": [
                {
                    "FromPort": 6443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 6443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node 6443/tcp webhook",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0ffcf40442eab4d79",
                            "UserId": "381492144727"
                        },
                        {
                            "GroupId": "sg-0e0de3849a5930789",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 9443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 9443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node 9443/tcp webhook",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 1025,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Node to node ingress on ephemeral ports",
                            "GroupId": "sg-0b4eb1cad534284de",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 8443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 8443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node 8443/tcp webhook",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 10250,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 10250,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node kubelets",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Node to node CoreDNS UDP",
                            "GroupId": "sg-0b4eb1cad534284de",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Node to node CoreDNS",
                            "GroupId": "sg-0b4eb1cad534284de",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node groups",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 4443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 4443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Cluster API to node 4443/tcp webhook",
                            "GroupId": "sg-05558b09cd58d8f9c",
                            "UserId": "381492144727"
                        }
                    ]
                },
                {
                    "FromPort": 31090,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "165.232.34.130/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 31090,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "381492144727",
            "GroupId": "sg-0b4eb1cad534284de",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow all egress"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "sock-shop-node"
                },
                {
                    "Key": "kubernetes.io/cluster/sock-shop",
                    "Value": "owned"
                }
            ],
            "VpcId": "vpc-069f5b44576540128"
        }
    ]
}
